# gravity

./: .clang-tidy  .editorconfig  .envrc  .gdbinit  .gitignore  .leak-sanitizer-suppressions  CMakeLists.txt  CMakePresets.json  README.md
cmake/: common.cmake
docs/: task.md
engine/: CMakeLists.txt  README.md
engine/include/engine/: algorithm.hpp  camera.hpp  context.hpp  error.hpp  fundamental.hpp  gl.hpp  image.hpp  imgui.hpp  math.hpp  mesh.hpp  ranges.hpp  sdl.hpp  util.hpp
engine/src/: camera.cpp  context.cpp  gl.cpp  image.cpp  imgui.cpp  mesh.cpp  sdl.cpp  util.cpp
gravity/: CMakeLists.txt
gravity/src/: main.cpp
